---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2024-12-28
  Bugfixes:
    - Fixed crash when opening infinity chest with multiple filter slots
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2024-11-17
  Bugfixes:
    - Added missing "valid" check on gui click
  Changes:
    - Added tooltip for pipette
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2024-11-06
  Bugfixes:
    - Fix crash on filtered mining drills with fluids
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2024-11-02
  Bugfixes:
    - Fixed invalid updaters/entities
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2024-11-02
  Changes:
    - Support for filtered miners
    - Support for quality upgraded products
  Bugfixes:
    - Fixed incorrect addition of filters of filterable inventories
    - Don't show filter if there's no relevant updater
  Internal:
    - Simplify and consolidate item and quality canonization
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2024-10-30
  Changes:
    - Support for spoilage results
  Bugfixes:
    - Fixed crash with non-item logistic requests
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-10-22
  Bugfixes:
    - Handle case of filter with quality and no item
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-10-21
  Changes: