@@ -2,6 +2,7 @@
 Version: 0.2.11
 Date: ????
   Changes:
+    - Support output filter of spoiled fuel
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.10
 Date: 2024-12-28
